# CompletePT

./: CMakeLists.txt  PermTestingCPU.cpp  PermTestingCPU.h  PermTestingGPU.cpp  PermTestingGPU.h  PermTestingShared.cpp  PermTestingShared.h  README.md  demo_OneSamplePermTestingCPU.cpp  demo_OneSamplePermTestingGPU.cpp  demo_PermTestingCPU.cpp  demo_PermTestingGPU.cpp  demo_PermTestingIterativeCPU.cpp  demo_PermTestingMatrixCPU.cpp  demo_TwoSamplePermTestingCPU.cpp  demo_TwoSamplePermTestingGPU.cpp  index.html  params.json
ArmadilloUtils/: CMakeLists.txt  PermTestingArmadilloUtils.cpp  PermTestingArmadilloUtils.h
PermTestingGPU/: CMakeLists.txt
Utils/: CMakeLists.txt  PermTestingUtils.cpp  PermTestingUtils.h  TimerCPU.h  TimerGPU.h
old_backup/: PermTestingCPU_Iterative.cpp  PermTestingCPU_Iterative.h  demo_PermTestingIterativeCPU.cpp
src/: CMakeLists.txt  PermTestingIterative.cpp  PermTestingMatrix.cpp
src/ArmadilloUtils/: CMakeLists.txt  PermTestingArmadilloUtils.cpp
src/CPU/: CMakeLists.txt  PermTestingCPU.cpp
src/PermTestingGPU/: PermTesting_AFMatrix.cpp
src/Utils/: CMakeLists.txt  PermTestingUtils.cpp  PermTestingUtils.h
